--- a/electionAppDao/src/main/webapp/WEB-INF/web.xml
+++ b/electionAppDao/src/main/webapp/WEB-INF/web.xml
@@ -73,6 +73,38 @@
 				 
  
 		 </servlet-mapping>
+		 
+		 
+ <servlet>
+  
+  <servlet-name>CandidateInfo</servlet-name>
+  <servlet-class>com.sunbeam.servlets.ResultServlet</servlet-class>
+  
+ </servlet>
+ 
+ 		<servlet-mapping>
+ 
+				 <servlet-name>CandidateInfo</servlet-name>
+				 <url-pattern>/result</url-pattern>
+				 
+ 
+		 </servlet-mapping>
+		 
+		 
+<servlet>
+  
+  <servlet-name>RegisterUser</servlet-name>
+  <servlet-class>com.sunbeam.servlets.RegisterServlet</servlet-class>
+  
+ </servlet>
+ 
+ 		<servlet-mapping>
+ 
+				 <servlet-name>RegisterUser</servlet-name>
+				 <url-pattern>/register</url-pattern>
+				 
+ 
+		 </servlet-mapping>
  
  
   
